methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:23: error: ';' expected but 'return' found.
  }  return vuBiscuit
     ^